added tailwind stuff. And some polish

--- a/tutorial/01. What are we building.md
+++ b/tutorial/01. What are we building.md
@@ -1,17 +1,18 @@
 # What are we building 
 
+
+We're going to start off by building a simple CRUD app. This will give you a good idea about how all the technologies we are using fit together. This is not going to give you ninja-master level skillz, you can't get those in a single weekend. The goal here is to expose you to the things you will need to know in order to do most of what you will need to do, and set you up for future growth and success.
+
+## Some useful videos 
+
 At this point, if this is a live event, your instructor should take you though a demo and introduce the different technologies. 
 
-You are also welcome to watch [this](https://www.youtube.com/live/limx6x6-D9Q?si=KDnU8A7Ofk04zD57&t=2987
-) video. This demo gives a tour of the technologies we are using. 
+You are also welcome to watch these videos at any point.
 
-Most of them anyway.
+- https://www.youtube.com/live/limx6x6-D9Q?si=KDnU8A7Ofk04zD57&t=2987
+- https://www.youtube.com/watch?v=rrliP18nIig
 
-And [this one](https://www.youtube.com/watch?v=rrliP18nIig
-) focuses on the testing part.
-
-
-## CRUD 
+## We're building a CRUDdy TODO list app! 
 
 CRUD stands for Create, Read, Update, Delete. 
 
@@ -39,6 +40,3 @@ You can also update things by filling in forms or interacting with them in diffe
 
 This makes use of the DELETE HTTP verb.
 
-## Choose your own adventure 
-
-Now would be a good time to think about a thing you would like to build. Keep it simple for now and try to follow along with the tutorial. You can always expand on things later on.
