--- a/tutorial/02. Django project set up.md
+++ b/tutorial/02. Django project set up.md
@@ -4,8 +4,7 @@ The first thing to do is create a virtual environment.
 
 (NOTE: there are some extra resources included at the end of each section. If there is something that isn't making sense there is a good chance there is a link to something useful there).
 
-We'll use the venv module and do things pretty manually. If you want to do things a different way please go ahead. There are many different tools available. Many of these tools are wonderful. 
-
+We'll use the `venv` module and do things pretty manually. If you want to do things a different way please go ahead. There are many different tools available. Many of these tools are wonderful.
 We are doing things the simple way so we don't distract you from the stars of the show. 
 
 Here we go:
@@ -20,7 +19,7 @@ source venv/bin/activate
 pip install django
 
 # Now start our application
-# Yata == yet another todo app. You can name your app something else
+# Yata == yet another todo app. You can name your app whatever you want to and you can change it later if you feel like it.
 
 django-admin startproject yata
 ```
@@ -38,7 +37,7 @@ If you look inside the newly created directory, you'll see something like:
     └── wsgi.py
 ```
 
-- The outer yata/ root directory is a container for your project. You can change the name if you want. Nothing will break
+- The outer yata/ root directory is a container for your project. You can change the name if you want
 - manage.py: A command-line utility that lets you interact with this Django project in various ways. We'll be using this a lot.
 - The inner yata/ directory is the actual Python package for your project. Its name is the Python package name
 - yata/__init__.py: An empty file that tells Python that this directory should be considered a Python package.
@@ -70,7 +69,7 @@ You'll see a nice looking website with a rocket on it. Rockets are great.
 
 ## Git
 
-You should be making use of git to keep track of your work.  While Git itself is out of scope in this tutorial, it would be useful to make use of it while you go through the work.
+You should be making use of git to keep track of your work.  While Git itself is out of scope in this tutorial, it would be useful to make use of it while you go through the work. Especially when you get to the part about building your own project!
 
 use `git init` to initialise your repo.
 
