--- a/tutorial/03. Setting up an app.md
+++ b/tutorial/03. Setting up an app.md
@@ -18,6 +18,8 @@ A project is a collection of configuration and apps.
 
 On smaller projects (like this tutorial) it can feel a bit weird and clunky because the project has one responsibility and the app has the same responsibility. But on bigger projects, apps make a lot more sense. Django is built for scale - apps help us organise code and manage complexity.
 
+To make this less confusing, many developers simply name their main project `config`. All the project configuration would go into the `config` directory and then all the apps get created using names that make sense for them. 
+
 ## Update the settings
 
 Go to your project's `settings.py` file. Now add your app to the `INSTALLED_APPS` list.
@@ -48,7 +50,9 @@ def index(request):
     return HttpResponse("Hello world")
 ```
 
-Now make a new file in your app called `urls.py`. This file should be in the same directory as the views.py file you just worked with.
+**Pay close attention to the next part, a lot of people skim read this and get themselves tied in a knot!**
+
+Now make a new file in your `app` called `urls.py`. This file should be in the same directory as the `views.py` file you just worked with.
 
 Put this inside the file:
 
@@ -66,7 +70,7 @@ You will be adding to this over time as you create more views.
 
 Now we need to wire things up so that the project knows about the new url configuration.
 
-Go to your project's main configuration file (`settings.py`). It'll already have a bunch of stuff written in there.
+Go to your project's main urls file (also named `urls.py`). It'll already have a bunch of stuff written in there.
 
 Edit it so it is more like this:
 
@@ -80,11 +84,13 @@ urlpatterns = [
 ]
 ```
 
+At this point you should have 2 separate `urls.py` files!
+
 Refresh the webpage and you'll now see your hello-world page.
 
 # Extra resources
 
 You can learn more about url configuration here: https://docs.djangoproject.com/en/5.1/topics/http/urls/
 
-You don't need to be a url configuration ninja to complete this tutorial.
+You don't need to be a url configuration ninja to complete this tutorial, but it is nice to be able to see what is available.
 
