--- a/tutorial/04. Hello Playwright.md
+++ b/tutorial/04. Hello Playwright.md
@@ -20,7 +20,7 @@ playwright install
 
 ## Note
 
-Django uses unittest by default. We are going to be using Pytest instead because pytest-playwright has a lot of functionality. Writing that functionality ourselves would be a bit of a pain.
+Django uses `unittest` by default. We are going to be using Pytest instead because `pytest-playwright` has a lot of functionality. Writing that functionality ourselves would be a big job.
 
 We'll need to install this as well:
 
@@ -40,11 +40,13 @@ env =
 
 ```
 
-Make sure you replace `yata` with your own project name.
-
-Pytest env made the `env =` section of your new ini file work. It lets you set up environmental variables for your tests. 
+`Pytest-env` made the `env =` section of your new ini file work. It lets you set up environmental variables for your tests. 
 
 The `DJANGO_ALLOW_ASYNC_UNSAFE` variable is necessary for Playwright to work with the Django project.
+
+## Test driven development 
+
+You have probably heard of Test Driven Development. If you have not then it's the practice of writing your tests before writing your code. At first it will feel a little strange if you are not used to it. Prepare yourself emotionally ;)
 
 ## Write a test 
 
@@ -55,6 +57,8 @@ In your app directory, do the following:
 - create a new file inside the tests directory called `test_todos.py` or similar. 
 - paste the following code into the file:
 
+**IMPORTANT** Pytest has a special mechanism for discovering your test functions so it can run them. If you are not careful about naming things exactly as expected, then Pytest wont run the tests.  You do have some control over how PyTest discovers your tests. You can change the configuration in your `pytest.ini` if you need to. And if your tests are not running, then `pytest.ini` is the best place to look for clues.
+
 ```
 from django.urls import reverse
 from playwright.sync_api import Page
@@ -62,7 +66,7 @@ from playwright.sync_api import Page
 def test_display_empty_list_on_first_load(live_server, page: Page):
     url = reverse_url(live_server, "index")
 
-    weeee  ## NameError. This is intentional
+    weeee  ## NameError. This is intentional. Please leave it here for now. We are doing this to check our wiring!
 
     page.goto(url)
     page.wait_for_selector("text=Nothing to see")
@@ -77,12 +81,11 @@ def reverse_url(
 
 Generally, having one tests.py file is not enough. It's often useful to have multiple test files. That is why we delete tests.py and create a directory for our tests.
 
-The other possibly confusing thing is the `reverse_url` function. In our tests, we will need to be able to access different urls. Hardcoding urls (editing them out by hand) is bad practice for many reasons. This function will make it easier for us to write our tests.
+The other possibly confusing thing is the `reverse_url` function. In our tests, we will need to be able to access different urls. Hardcoding urls (writing them out by hand) is bad practice for many reasons (Can you think of why?). This function will make it easier for us to write our tests.
 
 In our first test we have `url = reverse_url(live_server, "index")`.  This makes use of the url configuration to figure out the final url.
 
 We included the `reverse_url` function in our test file because it was convenient to put it there. Once the app gets a little bigger it would be useful to move the function somewhere else so that it can be re-used.
-
 
 ## Run your tests
 
@@ -94,7 +97,7 @@ You'll get a failure because of the `NameError`. This means everything is wired 
 
 Now remove the `NameError` and run the tests again. 
 
-The test takes a little bit of time to run. Why is that?
+The test takes a little bit of time to run. Why is that? What do you remember about how Playwright works?
 
 The test will still fail. The next thing we will do is make it pass.
 
@@ -116,15 +119,14 @@ Rather:
 
 Use `pip freeze` to see a list of all the installed packages. 
 
-Think back to all the things you installed using `pip install ???`. Do not type in `pip install ???` at this point. Be careful about simply copy-pasting things from a tutorial without reading the sentence. 
+Think back to all the things you installed using `pip install ???`. (Do not type in `pip install ???` at this point. Be careful about simply copy-pasting things from a tutorial without reading the sentence!)
 
-Look through the output from pip freeze and identify the things you explicitly installed. Copy those lines and put them into a new file called `requirements.txt`.
+Look through the output from `pip freeze` and identify the things you explicitly installed. Copy those lines and put them into a new file called `requirements.txt`.
 
 Mine looks like:
 
 ```
 Django==5.1.1
-django-browser-reload==1.15.0
 playwright==1.47.0
 pytest==8.3.3
 pytest-django==4.9.0
