--- a/tutorial/06. Tailwind.md
+++ b/tutorial/06. Tailwind.md
@@ -62,9 +62,5 @@ This package makes life much easier:
 
 https://github.com/adamchainz/django-browser-reload
 
-## Another side quest 
-
-The way we installed Tailwind is not the best. It's alright for a development environment and it works fine, but it is not recommended in production because the file at `https://cdn.tailwindcss.com` is large and full of terrors (I mean, it's slow).
-
-See if you can follow the installation instructions on the tailwind website. The "CLI" installation is fairly straightforward (if a little weird for us Python devs). It's a nice way to install it because it gives you direct access to some of Tailwind's configuration options.
+It only takes a few minutes to set up and it makes life much nicer.
 
