--- a/tutorial/07. C is for Create.md
+++ b/tutorial/07. C is for Create.md
@@ -32,14 +32,13 @@ class TodoItem(models.Model):
 
 Models are covered (slightly) in part 2 of the official Django tutorial: https://docs.djangoproject.com/en/5.1/intro/tutorial02/
 
-
 You can also learn more here: https://docs.djangoproject.com/en/5.1/topics/db/models/
 
 For the purposes of this tutorial, we'll just make one model. Nothing too fancy.
 
 ## Make a form 
 
-Inside your app, make a new file called `forms.py`. Here you will define a form for creating an instance of your thingie. 
+Inside your app, make a new file called `forms.py`. Here you will define a form for creating a new `TodoItem` instance. 
 
 My `forms.py` file looks like this:
 
