--- a/tutorial/09. Form submission.md
+++ b/tutorial/09. Form submission.md
@@ -19,7 +19,7 @@ We will need to create a template that we can use to render one item in the list
 
 Create a new html file in the same directory as your index.html.  Mine is called `partial_todo_item.html`.
 
-When you build a big HTMX application then you generally end up with a lot of templates. It's really useful to come up with a naming convention that will serve you. I use the word `partial` to say that a template is not a full page, but just a piece of html. 
+When you build a big HTMX application then you generally end up with a lot of templates. It's really useful to come up with a naming convention that will serve you. I use the word `partial` to say that a template is not a full page, but just a piece of html. Later on we'll introduce a tool that helps keep all our templates and partials sane and tidy. 
 
 My template looks like this:
 
@@ -81,6 +81,7 @@ Put something like this in the body of your html:
 ```
 <div id="todo_items" />
 ```
+
 Pay special attention to the `id` attribute here. You'll need this value later.
 
 
