--- a/tutorial/00. Intro to tutorial.md
+++ b/tutorial/00. Intro to tutorial.md
@@ -1,66 +1,43 @@
 # Intro 
 
-This tutorial shows you how to use DJango, HTMX, Tailwind, Playwright and AlpineJS to build a todo app. Because the world needs another todo list app. We all have stuff to do.
+This tutorial shows you how to use Django, HTMX, Tailwind, Playwright and AlpineJS to build a TODO app. Because the world needs another todo list app. We all have stuff to do.
 
 ## Self-paced 
 
 It would be useful to have everyone start at the same time so we can set the scene. But once we have begun, please move at your own pace! 
 
-Remember that this is not a race! 
+Everybody who is taking part in this tutorial has a different background. There are people who are relatively new to Python and web dev, and there are people who have been around the block. You'll move at different paces and need different things. That is totally fine :)
+
+Remember that this is not a race! Take the time you need to understand each step.
 
 ## Getting the most out of this tutorial
 
-The more you are able to engage with the materials, the more it will stick and the more useful this will be.
+This tutorial is not designed to be the perfect source of all knowledge. It's a guide. We will not be deep-diving into every concept along the way because then it would have to be a book. Quite a big book.. 
 
-If learning feels easy then you might not be learning much. Lean into the hard parts. 
+There is a good chance that you will come across concepts that are not familiar to you as you move through this tutorial. That is expected. Try to take the time to understand things. The more you lean in and try to understand how everything fits together, the more you will get out of this learning experience. 
 
-Here are a few recommendations on how to make the most of this:
-
-### 1. Choose your own adventure
-
-You can follow this tutorial exactly and copy/paste the code into the right places. You will get something out of doing that. You will get familiarity.
-
-But if you want more, if you want to retain the ideas and have a more engaging experience, then it's useful to get off the beaten track.
-
-Try to pick a project to work on that is your own. If you are new to this career then this could turn into a portfolio project. Or maybe there is a fun side project you have been thinking about. 
-
-There is a list of project ideas in the file: [Appendix: Project ideas](./Appendix:%20Project%20ideas.md) 
-
-If you are not sure what to choose right now, wait until after the section about CRUD.
-
-### 2. Indulge in side quests 
-
-This tutorial is not the perfect source of all knowledge. It's a guide. We will not be deep-diving into every concept along the way. Some people might want some deep dives though.
-
-If you come across something you don't understand, take the time to understand it. Ask questions if you need to. This is not a race to the finish. Learning takes time.
-
-## Contributions welcome
-
-If you see something that is out of place, missing or unclear then feel free to fix things. If you are not able to fix it yourself, then say something about it!
+Don't be afraid to ask questions. Don't feel bad if you are missing a piece of prerequisite knowledge. Just ask the questions you need to. 
 
 ## Prerequisite knowledge 
 
-This tutorial is not designed for people who are completely new to programming. That said, if you are new and you have found yourself here it's totally fine! There are a few learning resources listed below that you can go through. 
+This tutorial is not designed for people who are completely new to programming. It's useful for you to know:
 
-Here are a few recommendations on things you can start with:
+- Python (just the basics is alright)
+- Virtual environments 
+- How HTML works
 
-First, get a bit of an understanding of how the internet works and how these technologies fit together: 
+## Structure 
 
-- Get a big picture of how the internet works [here](https://www.sheenaoc.com/articles/2024-06-22-anatomy-of-a-web-app-00-toc)
-- To see why HTMX is exciting, read [this](https://www.sheenaoc.com/articles/2024-06-30-htmx). It does mention quite a few funny technologies, but try to think about how they fit in with the big picture picture from above
+This workshop aims to give you some robust skills. This is not entertainment. We want you to retain the skills as time continues. That means we will be relying on some tried and true, science-backed teaching mechanisms.
 
-You will need to install Python. This can be googled. Get the latest stable version.
+1. Spaced repetition 
 
-It would be useful if you knew some Python. The main concepts you will need are:
+If you come across a concept once then you are very likely to forget it. We will revisit concepts a few times over in different ways.
 
-- variables
-- flow control (loops, if statements)
-- functions
-- classes 
-- all prerequisite knowledge for the above 
+2. Realistic applications
 
-You don't need to be a super expert in Python for this tutorial.
+Once you are at the end of the main tutorial content you will be invited to build something uniquely yours. This will force you to grapple with the concepts in different ways and get hard feedback about your own thought-processes. 
 
-[Here](https://www.reddit.com/r/learnpython/wiki/books/) is a giant list of books and resources. Try one out. If you don't like that one, try another. 
+## Portfolio 
 
-It would be interesting to know what works for you. 
+For those of you who are newer to software development, the project you build could easily become a major part of your personal portfolio. Put care into what you do here and it can pay off in a big way!
