--- a/tutorial/07. C is for Create.md
+++ b/tutorial/07. C is for Create.md
@@ -135,3 +135,14 @@ Those curly braces and percentage signs are a part of Django's template library.
 The `{% csrf_token %}` line makes sure that a special token is sent to the server when the form is submitted. CSRF Tokens are used to prevent cross site request forgery. You can learn more here: https://docs.djangoproject.com/en/5.1/howto/csrf/ 
 
 If you open up your browser dev-tools (F12 on chrome) then you should be able to see that there is a hidden form field called `csrfmiddlewaretoken`.
+
+## Crispy side quest 
+
+As you build more complicated forms you'll realise that they are kinda ugly... 
+
+There is a solution. 
+
+- install Crispy tailwind: https://github.com/django-crispy-forms/crispy-tailwind 
+- use the `|crispy` template filter on your forms. 
+
+This is explained in the crispy tailwind docs. 
