--- a/tutorial/03. Setting up an app.md
+++ b/tutorial/03. Setting up an app.md
@@ -88,9 +88,53 @@ At this point you should have 2 separate `urls.py` files!
 
 Refresh the webpage and you'll now see your hello-world page.
 
-# Extra resources
+## Extra resources
 
 You can learn more about url configuration here: https://docs.djangoproject.com/en/5.1/topics/http/urls/
 
 You don't need to be a url configuration ninja to complete this tutorial, but it is nice to be able to see what is available.
+
+## Subquest: renaming your project directory 
+
+At this point we have 2 separate directories in our whole project:
+
+```
+├── manage.py
+├── yata
+│   ├── asgi.py
+│   ├── __init__.py
+│   ├── settings.py
+│   ├── urls.py
+│   └── wsgi.py
+└── todos
+    ├── admin.py
+    ├── apps.py
+    ...
+```
+
+This kind of thing can get confusing.
+
+An emerging common practice is to name the "project" directory something different. for example `config` (since it houses the configuration for the entire project) or `core` (for similar reasons).
+
+You are welcome to rename your project directory at any point. There is nothing magical about the name. 
+
+Good code makes its intentions clear, and if you want to choose a different name to make the code more clear then you should do that. 
+
+For example you might want something like this:
+
+```
+├── manage.py
+├── config   <<< changed
+│   ├── asgi.py
+│   ├── __init__.py
+│   ├── settings.py
+│   ├── urls.py
+│   └── wsgi.py
+└── todos
+    ├── admin.py
+    ├── apps.py
+    ...
+```
+
+Note that you will need to change the name in multiple places. If you change the name of your directory and then try to run `python manage.py runserver` then you will get error messages that will tell you what else you need to fix.
 
