minor polish based on feedback

--- a/tutorial/06. Tailwind.md
+++ b/tutorial/06. Tailwind.md
@@ -64,3 +64,14 @@ https://github.com/adamchainz/django-browser-reload
 
 It only takes a few minutes to set up and it makes life much nicer.
 
+Once you have set it up, then try to play with your template and see how well it works. For example, you might change some text sizes and colours.
+
+Consider:
+
+```
+<div class="text-center text-2xl font-bold text-transparent/30 pt-6">
+    Nothing to see here...
+</div>
+```
+
+Can you make this text larger? What does `pt-6` do? What if you change it? If you change the text to something else then does the change reflect immediately or do you need to refresh the page?
