--- a/tutorial/07. C is for Create.md
+++ b/tutorial/07. C is for Create.md
@@ -136,11 +136,17 @@ The `{% csrf_token %}` line makes sure that a special token is sent to the serve
 
 If you open up your browser dev-tools (F12 on chrome) then you should be able to see that there is a hidden form field called `csrfmiddlewaretoken`.
 
+## Side quest: Bigger form
+
+The form on your page have one field and one button. It's pretty simple. 
+
+Can you add another field? What about the todo list item description? Maybe you can add a "due date" or a "do date" to your item. 
+
 ## Crispy side quest 
 
-As you build more complicated forms you'll realise that they are kinda ugly... 
+As you build more complicated forms you'll realise that they are kinda ugly...  
 
-There is a solution. 
+There is a simple solution. 
 
 - install Crispy tailwind: https://github.com/django-crispy-forms/crispy-tailwind 
 - use the `|crispy` template filter on your forms. 
