--- a/tutorial/16. Tailwind like a pro.md
+++ b/tutorial/16. Tailwind like a pro.md
@@ -1,6 +1,6 @@
 # Tailwind like a pro 
 
-Our html classes are looking pretty wild. The code is getting a bit hard to read. This isn't great. 
+Our HTML classes are looking pretty wild. The code is getting a bit hard to read because the class strings are so long. And things are likely to get quite repetitive as the application gets bigger.  
 
 Another thing you might have noticed is that when you open up your browser's dev tools (F12 in Chrome) then there is a warning in the console. The warning says: 
 
@@ -8,7 +8,7 @@ Another thing you might have noticed is that when you open up your browser's dev
 cdn.tailwindcss.com should not be used in production. To use Tailwind CSS in production, install it as a PostCSS plugin or use the Tailwind CLI: https://tailwindcss.com/docs/installation
 ```
 
-This is not ideal.
+None of this is ideal.
 
 We're going to install tailwind "properly" now. 
 
@@ -19,11 +19,16 @@ We are going to install Tailwind using Tailwind's recommended methods. If you lo
 You'll need to install `node` if you don't already have it installed. You can read the docs [here](https://nodejs.org/en/learn/getting-started/how-to-install-nodejs). 
 
 Then install tailwind like so:
+
 ```
 npm install -D tailwindcss
 ```
 
-You'll see a `node_modules` directory in your project directory alongside a few other things. Make sure that `package.json` is in the same directory as your `manage.py` file.
+You'll see a `node_modules` directory in your project directory alongside a few other things. 
+
+**IMPORTANT**: Make sure that `package.json` is in the same directory as your `manage.py` file.
+
+Make sure your `.gitignore` file is set up to ignore the `node_modules` directory.
 
 Next up, initialise tailwind:
 
@@ -37,10 +42,10 @@ This will create a `tailwind.config` file.
 
 The way the tailwind CLI works is:
 
-- it looks at what tailwind classes you are using and a few other inputs 
-- it then outputs a css file that only includes the stuff you need 
+- it looks at what tailwind classes you are using in your html files, your tailwind.config file and an input css file (we'll see this later)
+- it then outputs a final css file that only includes the stuff you need 
 
-So we need to configure tailwind so that it knows where to look. We only reference tailwind classes from inside our html template files, so we need to tell Tailwind about them.
+We need to configure tailwind so that it knows where our html files are. We reference tailwind classes from inside our html template files, so we need to tell Tailwind to look at those files.
 
 Go into your `tailwind.config` file and edit it so the module exports look like this:
 
@@ -83,7 +88,8 @@ You will now see `tailwind_output.css` file alongside your `tailwind_input.css` 
 
 The next thing we need to do is update `index.html` so that it makes use of our new tailwind output file.
 
-Get rid of the line that says 
+Get rid of the line that says:
+
 ```
 <script src="https://cdn.tailwindcss.com"></script>
 ```
@@ -94,9 +100,13 @@ Replace it with:
 <link rel="stylesheet" type="text/css" href="{% static 'todos/tailwind_output.css' %}">
 ```
 
-Now if you refresh your page you'll see that...nothing changed. It should all look exactly the same. 
+Now if you refresh your page you'll see that...nothing changed. It should all look exactly the same. This is good.
 
-If you open up the developer console you'll see that the warning message has disappeared.
+If you open up the developer console you'll see that the warning message has disappeared. It no longer says:
+
+```
+cdn.tailwindcss.com should not be used in production. To use Tailwind CSS in production, install it as a PostCSS plugin or use the Tailwind CLI: https://tailwindcss.com/docs/installation
+```
 
 ## What's the point? 
 
@@ -154,10 +164,10 @@ This will build your output css and then watch for file changes. When your code 
 For now on when you run your project you'll need to run 2 commands in 2 terminals: 
 
 ```
-# Terminal 1
+# Terminal 1 (virtual env needs to be active)
 python manage.py runserver 
 
-# Terminal 2
+# Terminal 2 (don't worry about the virtual env here, it makes no difference)
 npm run tailwind 
 ```
 
@@ -186,7 +196,7 @@ module.exports = {
 
 ```
 
-There is nothing special about the word `primary` here. We could have called it whatever we wanted. And there is nothing special about `colors.orange` either. It's a perfectly normal JavaScript object.
+There is nothing special about the word `primary` here. We could have called it `screwdriver` if we wanted. And there is nothing special about `colors.orange` either. It's a perfectly normal JavaScript object.
 
 You can now use the word `primary` instead of `orange` in your html files. Eg you could do things like this:
 
@@ -203,7 +213,7 @@ Tailwind has a lot of different colors built in. You can see a list of them [her
 For example you might want to do something like this to introduce a whole new set of colors:
 
 ```
-blueChill = {
+chill = {
         '50': '#f2f9f9',
         '100': '#ddeff0',
         '200': '#bfe0e2',
@@ -221,14 +231,14 @@ module.exports = {
   content: ["./**/*.html"],
   theme: {
     extend: {
-      colors: { blueChill }
+      colors: { chill }
     },
   },
   plugins: [],
 }
 ```
 
-You can generate new color scales using [this tool](https://uicolors.app/create). 
+You can generate new color scales using [this tool](https://uicolors.app/create).
 
 ## Custom classes 
 
@@ -244,8 +254,6 @@ Tailwind is really great for a while, but it can get to a point where the class 
     .button {
         @apply rounded bg-primary-600 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 inline-block align-middle
     }
-
-    // you can a
 }
 ```
 
@@ -256,6 +264,8 @@ Eg:
 ```
 <a class="button" href="somewhere">A link that looks like a button</a>
 ```
+
+See if you can add more of your own classes. For example, you might want a secondary button that is a different color to the primary button. 
 
 ## Sensible default styles
 
@@ -280,6 +290,8 @@ You can also use the tailwind_input.css file to set up default styles for differ
 
 Now all paragraphs will have large text.
 
+How would you like your links to look? How big should your `h1` headings be? How about `h2`? This is a good place to set up all of that stuff.
+
 ## Good practice?
 
 There is some controversy around what is considered best practice in this space. 
@@ -288,8 +300,15 @@ The approach recommended by this tutorial is to use tailwind_input.css to set up
 
 You'll usually want to set up styling for paragraphs, headings, lists and anchors at the very least. 
 
-You'll also likely want some utility classes for different things, for example: primary_button, secondary_button and whatever else you use often. 
+You'll also likely want some utility classes for different things, for example: `button`, `button_secondary` and whatever else you use often. 
 
-Don't put absolutely everything in this file, only the things that get used a lot. 
+Don't put absolutely everything in this file, only the things that get used across many pages and places. This file should make your code clearer and easier to use, it should not make things unclear or hard to navigate.
 
-Generally it's good to keep information about layout and spacing in the HTML files themselves. 
+## Layout classes 
+
+Generally it's good to keep information about layout and spacing in the HTML files themselves. So, if you wanted to have a primary button with some extra padding on the left then you could say:
+
+```
+<button class="button pl-3" href="somewhere">A button that looks like a button</button>
+```
+
