--- a/tutorial/12. U is for update.md
+++ b/tutorial/12. U is for update.md
@@ -6,7 +6,6 @@ When a user checks a box then the item should be marked as "complete" in the dat
 
 This sounds simple enough, but there are complexities. We need to be sure that when we check a box then the correct item is updated. And we need to make sure that the UI is accurate once the box is checked. 
 
-
 ## A first test 
 
 Here is the algorithm for our first test:
@@ -77,11 +76,23 @@ def test_checkbox(live_server, page: Page):
     assert items[2].completed is False
 ```
 
-Of course, it fails. 
+Let's zoom in on this line for a moment:
 
-Let's sort that out.
+```
+items = [models.TodoItem.objects.create(title=f"Test item {i}") for i in range(3)]
+```
+
+This makes use of `models.TodoItem` so you will need to import something at the top of your test file to make this work. Otherwise you will get a `NameError`.
+
+The other really cool thing about this line is that it uses `range`. If you are new to Python then it's worth taking some time to understand how `range` works. It comes up a lot.
+
+The last thing to notice is that the line is sortof like a for loop. This is called a "list comprehension". These things are super powerful and worth knowing about!
 
 ## The code
+
+Of course, the test will fail because we haven't implemented the code yet. 
+
+Let's sort that out.
 
 In the TODO list app, we'll want to send a PUT request to the backend when a box is checked. 
 
@@ -104,7 +115,13 @@ def action_toggle_todo(request, item_id):
     return HttpResponse('') 
 ```
 
-Let's see what happens if we return a blank response.  What do you think will happen? We'll find out later.
+You will also need to import `HttpResponse` to get this to work.  Put this somewhere near the top of your views.py file:
+
+```
+from django.http import HttpResponse
+```
+
+Ok, so we are returning `HttpResponse('')`. This is a blank response.  What do you think will happen? We'll get to the answer in a little while.
 
 ## The Url
 
