--- a/tutorial/17. Template inheritance.md
+++ b/tutorial/17. Template inheritance.md
@@ -122,6 +122,15 @@ You might have something like this:
 
 In other words, it it often useful to have multiple levels to your template hierarchy, and different templates can inherit from different places.
 
+## Try it out 
+
+
+Add another page to your website. Perhaps you want an `about us` page or something. You'll need to set up a url, a view and a template for that page. 
+
+Can you get the page to work? 
+
+How can the user navigate to that page? Can you create a link that gets them there from your index page?
+
 ## Template partials 
 
 We'll cover this in the next part of the tutorial
