updated class quotations

--- a/tutorial/12. U is for update.md
+++ b/tutorial/12. U is for update.md
@@ -34,11 +34,10 @@ Let's start off by making it easier to write our tests and access the elements w
 Go to the partial template and add a testid to the checkbox. Mine looks like this:
 
 ```
-<input type="checkbox" class="h-6 w-6 rounded border-green-300 text-green-600
-        accent-green-400 
-        cursor-pointer
-        inline-block align-middle" 
-        data-testid="toggle_item_{{ item.id }}" />
+<input 
+  type="checkbox" 
+  class="h-6 w-6 rounded border-green-300 text-green-600 accent-green-400  cursor-pointer inline-block align-middle" 
+  data-testid="toggle_item_{{ item.id }}" />
 ```
 
 Note that the `testid` makes use of the item's database id. so every checkbox will have a unique `testid`.
@@ -53,6 +52,33 @@ expect(page.get_by_test_id("toggle_item_5")).not_to_be_checked()
 ```
 
 This is much easier to work with.
+
+
+**COMMON PROBLEM** 
+
+If your `playwright codegen` is still generating funny looking code at this point then it is probably because your html is not formatted correctly. It's really important to make sure that all your html attributes have open and close quotes in the right places. 
+
+Eg, this will not work:
+
+```
+<input 
+  type="checkbox" 
+  class="h-6 w-6 rounded border-green-300 text-green-600 accent-green-400  cursor-pointer inline-block align-middle 
+  data-testid="toggle_item_{{ item.id }}" />
+```
+
+And this one will render your checkboxes as text inputs:
+
+```
+<input 
+  type="checkbox 
+  class="h-6 w-6 rounded border-green-300 text-green-600 accent-green-400  cursor-pointer inline-block align-middle" 
+  data-testid="toggle_item_{{ item.id }}" />
+```
+
+Every attribute must have an opening and closing `"`. 
+
+## Final test
 
 Here is a test:
 
