--- a/tutorial/17. Template inheritance.md
+++ b/tutorial/17. Template inheritance.md
@@ -44,9 +44,9 @@ In the case of the example above, what we would do is create a base template wit
 - define the head of the document and make sure htmx, alpinejs and tailwind are included 
 - draw the header bar of the page, with the logo and menu items 
 
-Then the index.html template would inherit from the base template and then only implement the todo list CRUD functionality. The calendar.html template would do similar.
+Then the index.html template would inherit from the base template and then only implement the todo list CRUD functionality. The calendar.html template would do similar - it would inherit from the base template and then implement only what it needs to.
 
-### Let's try it out 
+### Let's build a base template 
 
 In this section we'll be making use of a few different parts of the Django template language. Here is a reference:
 
@@ -75,7 +75,7 @@ Now when you refresh the page, you'll see the header area but the TODO list func
 
 The last thing do to is define a thing called a "block"
 
-In `_base.html` add the following right before the  `</body>` tag:
+In `_base.html` add the following right before the  closing `</body>` tag:
 
 ```
     {% block content %}
@@ -112,7 +112,7 @@ Run your tests to be sure.
 
 We have one base template and one page that inherits from it. This is a pretty simple template hierarchy.
 
-Often, things can become more complicated. Yuo can have multiple templates that get inherited from in different situations. 
+Often, things can become more complicated. You can have multiple templates that get inherited from in different situations. 
 
 You might have something like this:
 
@@ -122,10 +122,9 @@ You might have something like this:
 
 In other words, it it often useful to have multiple levels to your template hierarchy, and different templates can inherit from different places.
 
-## Try it out 
+## Side quest: Can you add another page?
 
-
-Add another page to your website. Perhaps you want an `about us` page or something. You'll need to set up a url, a view and a template for that page. 
+Add another page to your website. Perhaps you want an `about us` page or something. Feel free to make it something dead simple. You'll need to set up a url, a view and a template for that page. 
 
 Can you get the page to work? 
 
