--- a/tutorial/07. C is for Create.md
+++ b/tutorial/07. C is for Create.md
@@ -140,7 +140,7 @@ If you open up your browser dev-tools (F12 on chrome) then you should be able to
 
 The form on your page have one field and one button. It's pretty simple. 
 
-Can you add another field? What about the todo list item description? Maybe you can add a "due date" or a "do date" to your item. 
+Can you add another field? What about the todo list item description?
 
 ## Crispy side quest 
 
