--- a/tutorial/02. Django project set up.md
+++ b/tutorial/02. Django project set up.md
@@ -67,6 +67,8 @@ Head on over to [http://127.0.0.1:8000/](http://127.0.0.1:8000/) to visit the si
 
 You'll see a nice looking website with a rocket on it. Rockets are great.
 
+![screenshot](images/project_setup.png)
+
 ## Git
 
 You should be making use of git to keep track of your work.  While Git itself is out of scope in this tutorial, it would be useful to make use of it while you go through the work. Especially when you get to the part about building your own project!
@@ -84,6 +86,8 @@ test-results/
 node_modules/
 .pytest_cache/
 ```
+
+You can also create a repo on Github or similar if you would like to.
 
 ## Extra learning resources
 
