--- a/tutorial/00. Intro to tutorial.md
+++ b/tutorial/00. Intro to tutorial.md
@@ -12,7 +12,7 @@ Remember that this is not a race! Take the time you need to understand each step
 
 ## Getting the most out of this tutorial
 
-This tutorial is not designed to be the perfect source of all knowledge. It's a guide. We will not be deep-diving into every concept along the way because then it would have to be a book. Quite a big book.. 
+This tutorial is not designed to be the perfect source of all knowledge. It's a guide. We will not be deep-diving into every concept along the way because then it would have to be a book. Quite a big book.
 
 There is a good chance that you will come across concepts that are not familiar to you as you move through this tutorial. That is expected. Try to take the time to understand things. The more you lean in and try to understand how everything fits together, the more you will get out of this learning experience. 
 
@@ -36,7 +36,7 @@ If you come across a concept once then you are very likely to forget it. We will
 
 2. Realistic applications
 
-Once you are at the end of the main tutorial content you will be invited to build something uniquely yours. This will force you to grapple with the concepts in different ways and get hard feedback about your own thought-processes. 
+Once you are at the end of the main tutorial content you will be invited to build something uniquely yours. This will force you to grapple with the concepts in different ways and get hard feedback about your own thought-processes.  This will also help you build stronger mental frameworks and do better work in the long run.
 
 ## Portfolio 
 
